# pipelines

./: .flake8  .gitignore  .gitmodules  AUTHORS  README.md  README.rst  conftest.py  docs-requirements.txt  go.mod  nifti.nii  pyproject.toml  pytest.ini  required-interfaces.rst  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  epic.md  feature_request.md  new-epic.md  new-feature.md  new-story.md  new-workflow-request.md  new_epic.md  new_feature.md  new_user_story.md  question.md  request-a-new-feature-.md  request-a-new-workflow.md  z-new-epic.md  z-new-feature.md  z-new-story.md  z-new-task.md
.github/workflows/: assign-to-ais-project.yaml  create-initial-lists.yml  create-issue-list.yml  docs.yml  generate_docs.yml  initialise-issue.yml  issue-actions.yml  issue-matrix.yml  issues.yml  move-to-todo.yml  on-editing-issue.yml  on-opening-issue.yml  populate-issue-list.yml  populate-issue.yml  release.yml  test.yml  trigger_docs.yml
ais/: entrypoint.py  utils.py
ais/mri/neuro/: mriqc.py
ais_pipelines/: entrypoint.py  utils.py
ais_pipelines/mri/neuro/: mriqc.py
australianimagingservice/: entrypoint.py  utils.py
australianimagingservice/mri/neuro/: afni.py  ants_cortical_thickness.py  fmriprep.py  (+13 more)
docs/: all_parcs_flow.md  config.toml  dwi_preprocessing_flow.md  tractography_connectomics_flow.md
docs/images/: assessor-mock-up.psd
docs/pipelines/: _index.md  ants_cortical_thickness.md  deepdicomsort.md  fibre_density_and_crosssection.md  fmriprep.md  freesurfer.md  human.neuro.bidsapp.fmriprep.md  human.neuro.bidsapp.mriqc.md  human.neuro.bidsapp.smriprep.md  human.neuro.t1w.preprocess.md  mriqc.md  mrtrix3_connectome.md  phi-finder.md  smriprep.md
docs_scripts/: generate_pipeline_docs.py  requirements.txt
notes/: dmriprep-strategies.md  qsiprep-strategies.md
requirements/quality-control/: phi-finder.txt
resources/fastsurfer/: run-script.sh
resources/neuro-parcellations/: Yeo2011_7N_split.txt  aparc_reordered_LUT.txt  aparca2009s_reordered_LUT.txt  economo_reordered_LUT.txt  glasser360_reordered_LUT.txt  hcpmmp1_ordered.txt  lut_glasser360_subcortical_original.txt  lut_glasser360_subcortical_reordered.txt  schaefer1000_reordered_LUT.txt  schaefer100_reordered_LUT.txt  schaefer200_reordered_LUT.txt  schaefer300_reordered_LUT.txt  schaefer400_reordered_LUT.txt  schaefer500_reordered_LUT.txt  schaefer600_reordered_LUT.txt  schaefer700_reordered_LUT.txt  schaefer800_reordered_LUT.txt  schaefer900_reordered_LUT.txt  vosdewael100_reordered_LUT.txt  vosdewael200_reordered_LUT.txt  vosdewael300_reordered_LUT.txt  vosdewael400_reordered_LUT.txt
resources/yeo2011-parcellations/: Yeo2011_17N_split.txt
scripts/: create_neuro_dataset.py  create_test_dataset.py  debug_specific_case.py  specific_test_case.py  test_build.py  test_docs.py
scripts/mri/: mriqc.py
src/: README.md  pyproject.toml
src/australianimagingservice/: _version.py
src/australianimagingservice/mri/human/neuro/: dwi.py
src/australianimagingservice/mri/human/neuro/dwi/: dwi_analysis.py  dwi_analysis_flow.md  dwi_analysis_flow.mmd  dwi_preprocessing.py  dwifslpreproc  dwipreproc  dwipreproc.py  eddy_current_corr.py  examine_metadata.py  main.py  qc.py  qsiprep.py  strategy_identification.py  susceptibility_est.py  switches.py  tractography_connectomics.py  utils.py  volume_recombination.py
src/australianimagingservice/mri/human/neuro/dwi/preproc/: __init__.py  eddy_current_corr.py  examine_metadata.py  main.py  qc.py  susceptibility_est.py  switches.py  utils.py  volume_recombination.py
src/australianimagingservice/mri/human/neuro/dwi/preproc/tests/: test_preproc.py
src/australianimagingservice/mri/human/neuro/t1w/: _version.py  preprocess.py
src/australianimagingservice/mri/human/neuro/t1w/preprocess/: __init__.py  all_parcs.py  freesurfer.py  fsl.py  helpers.py  labelsgmfix_task.py  mri_synthstrip.py  single_parc.py  workflow.py
src/australianimagingservice/mri/human/neuro/t1w/preprocess/tests/: test_preprocess.py
src/australianimagingservice/mri/human/neuro/t1w/tests/: test_preprocess.py
src/australianimagingservice/mri/quality_control/: phantomkit.py
tests/: create_neuro_dataset.py  in-docker-tst.py  requirements.txt  test_bids_apps.py  test_cli_docs.py  test_docs.py  test_make.py  test_misc.py  test_monai.py  test_mriqc.py  test_phi_finder.py  test_t1_preprocess.py  test_vial_signal.py
(+87 files in other folders)
